--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ h1,h2,h3{letter-spacing:.5px;margin:.2em 0}
   margin-bottom: 10rem;
 }
 
+button, a {
+  cursor: none !important;
+}
+
 /* Buttons */
 .cta{display:flex; gap:14px; flex-wrap:wrap; justify-content:center; margin-top:1rem}
 .btn{
